# pdf2readable

./: README.md  frontend.py  pdf_to_img.py  pyproject.toml  text_reader.py
